[package]
name = "beemorph"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "beemorph for global diversity"
homepage = "https://github.com/rustcodepro/beemorph"
repository = "https://github.com/rustcodepro/beemorph"


[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
eframe = "0.33.3"
egui = "0.33.3"
egui-data-table = "0.9.0"
egui-desktop = "0.2.3"
egui_autocomplete = "12.0.0"
egui_extras = "0.33.3"
figlet-rs = "0.1.5"
rayon = "1.11.0"
sqlx = { version = "0.8.6", features = ["sqlite"] }
